# django-htmx-modal-form-tailwind

./: .gitignore  README.md  pyproject.toml
django_htmx_modal_form/: settings.py  urls.py
movie_collection/static/: dialog.js  toast.js
movie_collection/templates/: index.html  movie_form.html  movie_list.html
